src/main/java/com/gtgsantos/example/carpooling/rest/error/Error.java
package com.gtgsantos.example.carpooling.rest.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class Error {

    private final String message;
}
